; ModuleID = '/home/carl/AnghaBench/http-parser/extr_test.c_message_complete_cb.c'
source_filename = "/home/carl/AnghaBench/http-parser/extr_test.c_message_complete_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32, i32, i32, i64 }

@parser = common dso_local global i32 0, align 4
@messages = common dso_local global %struct.TYPE_2__* null, align 8
@num_messages = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [135 x i8] c"\0A\0A *** Error http_should_keep_alive() should have same value in both on_message_complete and on_headers_complete but it doesn't! ***\0A\0A\00", align 1
@.str.1 = private unnamed_addr constant [102 x i8] c"\0A\0A *** Error http_body_is_final() should return 1 on last on_body callback call but it doesn't! ***\0A\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4
@currently_parsing_eof = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @message_complete_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, @parser
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @messages, align 8
  %8 = load i64, i64* @num_messages, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i64 %8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = call i64 @http_should_keep_alive(i32* @parser)
  %13 = icmp ne i64 %11, %12
  br i1 %13, label %14, label %19

14:                                               ; preds = %1
  %15 = load i32, i32* @stderr, align 4
  %16 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([135 x i8], [135 x i8]* @.str, i64 0, i64 0))
  %17 = call i32 @assert(i32 0)
  %18 = call i32 (...) @abort() #3
  unreachable

19:                                               ; preds = %1
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** @messages, align 8
  %21 = load i64, i64* @num_messages, align 8
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 4
  %24 = load i64, i64* %23, align 8
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %42

26:                                               ; preds = %19
  %27 = load i32*, i32** %2, align 8
  %28 = call i64 @http_body_is_final(i32* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %42

30:                                               ; preds = %26
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** @messages, align 8
  %32 = load i64, i64* @num_messages, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i64 %32
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 3
  %35 = load i32, i32* %34, align 8
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %42, label %37

37:                                               ; preds = %30
  %38 = load i32, i32* @stderr, align 4
  %39 = call i32 @fprintf(i32 %38, i8* getelementptr inbounds ([102 x i8], [102 x i8]* @.str.1, i64 0, i64 0))
  %40 = call i32 @assert(i32 0)
  %41 = call i32 (...) @abort() #3
  unreachable

42:                                               ; preds = %30, %26, %19
  %43 = load i32, i32* @TRUE, align 4
  %44 = load %struct.TYPE_2__*, %struct.TYPE_2__** @messages, align 8
  %45 = load i64, i64* @num_messages, align 8
  %46 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i64 %45
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 2
  store i32 %43, i32* %47, align 4
  %48 = load i32, i32* @currently_parsing_eof, align 4
  %49 = load %struct.TYPE_2__*, %struct.TYPE_2__** @messages, align 8
  %50 = load i64, i64* @num_messages, align 8
  %51 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i64 %50
  %52 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %51, i32 0, i32 1
  store i32 %48, i32* %52, align 8
  %53 = load i64, i64* @num_messages, align 8
  %54 = add i64 %53, 1
  store i64 %54, i64* @num_messages, align 8
  ret i32 0
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @http_should_keep_alive(i32*) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i64 @http_body_is_final(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
